--- a/Homecare/Views/Patient/CreatePatient.cshtml
+++ b/Homecare/Views/Patient/CreatePatient.cshtml
@@ -95,7 +95,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "PatientList")
 </div>
 
 @section Scripts {
