--- a/Homecare/Views/Home/Index.cshtml
+++ b/Homecare/Views/Home/Index.cshtml
@@ -1,31 +1,54 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Hjem";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Albertslund Hjemmepleje</h1>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <h2>Generel information</h2>
+        <div class="well well-lg">
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <h3>Overskrift 1</h3>
+                    Lorem Ipsum er ganske enkelt fyldtekst fra print- og typografiindustrien. Lorem Ipsum har været standard fyldtekst siden 1500-tallet, hvor en ukendt trykker sammensatte en tilfældig spalte for at trykke en bog til sammenligning af forskellige skrifttyper. Lorem Ipsum har.
+                </li>
+                <li class="list-group-item">
+                    <h3>Overskrift 2</h3>
+                    Det er en kendsgerning, at man bliver distraheret af læsbart indhold på en side, når man betragter dens layout. Meningen med at bruge Lorem Ipsum er, at teksten indeholder mere eller mindre almindelig tekstopbygning i modsætning.
+                </li>
+                <li class="list-group-item">
+                    <h3>Overskrift 3</h3>
+                    En søgning på Lorem Ipsum afslører mange websider, som stadig er på udviklingsstadiet. Der har været et utal af variationer, som er opstået enten på grund af fejl og andre gange med vilje (som blandt andet et resultat af humor).
+                </li>
+            </ul>
+            
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-8    ">
+        <h2>Hvem skal jeg besøge?</h2>
+        <div class="well well-lg">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Fulde navn</th>
+                        <th>Adresse</th>
+                        <th>Telefon</th>
+                        <th>Pårørendes telefonnummer</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John John Test</td>
+                        <td>En adresse der findes</td>
+                        <td>88888888</td>
+                        <td>88888888</td>
+
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
