--- a/Homecare/Views/Home/Contact.cshtml
+++ b/Homecare/Views/Home/Contact.cshtml
@@ -1,17 +1,19 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Kontakt";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
+<h3>Hvis du har glemt hvor du arbejder eller hvordan du skal kontakte hos:</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Albertslundvej 10<br />
+    2620 Albertslund<br />
+    <abbr title="Phone">Telefonnummer: 20402030</abbr>
+
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <p id="name"><b>Navn:</b> </p>
+    <p id="position"><b>Stiling:</b> </p>
+    <p id="phone"><b>Telefon:</b> </p>
+
 </address>
