--- a/Homecare/Views/Shared/_Layout.cshtml
+++ b/Homecare/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>Eksamensprojekt &copy; @DateTime.Now.Year - Toke Jacobsen, Anders Knudsen, Fredrik Mikkelsen, Jonathan Agerfelt </p>
+            <p>Eksamensprojekt &copy; @DateTime.Now.Year - Toke Jacobsen, Anders Knudsen, Fredrik Mikkelsen, Jonathan Lenz </p>
         </footer>
     </div>
 
